# avito

./: README.md  pyproject.toml
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options_and_more.py  0003_alter_ad_author.py  0004_selection.py  0005_category_slug_alter_ad_description_alter_ad_name_and_more.py  0006_alter_category_slug.py
avito/: settings.py  urls.py
datasets/: ad.csv
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ads_create_test.py  ads_detail_test.py  ads_list_test.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_user_birth_date_alter_user_email.py  0003_alter_location_name.py
